permit-access removed in Java 17
replacement seems backward compatible